Update Singapore relief measures for inflation

--- a/_posts/2024-02-16-Testing.md
+++ b/_posts/2024-02-16-Testing.md
@@ -11,4 +11,4 @@ https://www2.hkej.com/instantnews/international/article/3685167/%E6%96%B0%E5%8A%
 
 # 新加坡向居民派錢最多逾2300元抗通脹
 
-新加坡副總理兼財長黃循財在國會發表財政預算案時宣布，為了應付通脹蠶食購買力的問題，推出一系列紓困措施，包括向擁有不多於一個物業，年收入不超過10萬坡元(逾58.1萬港元)的居民，派發現金200至400坡元(約1162至2324港元)，同時向所有家庭派發600坡元優惠券，用於日常開支。
+新加坡副總理兼財長黃循財在國會發表財政預算案時宣布，為了應付通脹蠶食購買力的問題，推出一系列紓困措施，包括向擁有不多於一個物業，年收入不超過10萬坡元(逾58.1萬港元)的居民，派發現金200至400坡元(約1162至2324港元)，同時向所有家庭派發600坡元優惠券，用於日常開支
