--- a/_posts/2024-02-14-s330-marathon.md
+++ b/_posts/2024-02-14-s330-marathon.md
@@ -10,11 +10,11 @@ tags: [marathon]
 
 今年賽前完全冇諗過，全馬可以跑到Sub 330 (比上年PB快左17分鐘)，可算是對得住自己第十年參加渣馬，留下一點美好印記。
 
-![marathon-cert](/assets/img/2024marathon-cert) 
+![marathon-cert](img/2024marathon-cert){: width="400"}
 
 尚記得上年自己跟住345 Pacer收，跑到出西隧自己pacing太慢跟甩左，最後自己3小時47分完賽。今年跑到頭4K左近，路上遇見來自同一運動品牌既Running Club人跑 (不是pacer，似coach)。嘗試跟左跑幾K，望見隻錶都仲keep到每K大約4分50，就決定跟住呢個節奏跑，個陣其實預左中後段會慢慢跌watt，所以趁自己仲去到，就試下keep住跑。冇諗過用呢個配速頂到去35K，就開始同自己講，睇下有冇機會呢次做到Sub 330。
 
-![marathon-photo](/assets/img/marathon-photos)
+![marathon-photo](img/marathon-photos){: width="400"}
 
 可惜去到接近入西隧口，自己開始跌watt，最後都係跟甩左。出到西隧，見個陣pacing一下子跌到5分24，個陣有兩種聲音係腦海縈繞：一係堅持，一係放棄。直到跑到中環瑪頭見到太太，最後都係同自己講：得番幾K，唔好放棄，頂埋去！
 
