--- a/_posts/2024-02-17-sub330-marathon.md
+++ b/_posts/2024-02-17-sub330-marathon.md
@@ -6,7 +6,7 @@ categories: [General]
 tags: [marathon]
 ---
 
-今年賽前完全冇諗過，全馬可以跑到Sub 330 (比上年PB快左17分鐘)，可算是對得住自己第十年參加渣馬，留下一點美好印記。
+今年賽前完全冇諗過，全馬可以跑到**Sub 330** (比上年PB快左17分鐘)，可算是對得住自己第十年參加渣馬，留下一點美好印記。
 
 ![marathon-cert](/images/2024marathon-cert.png){: width="400"}
 
