Update race details and post-run reflections

--- a/_posts/2024-02-04-ccm-2024.md
+++ b/_posts/2024-02-04-ccm-2024.md
@@ -24,10 +24,15 @@ tags: [半馬拉松]
 ![male-vo2max](/images/male-vo2max-by-age-group.png)
 (數據經The Cooper Institute®許可轉載)
 
-(題外話：回程時
-
 # 賽事特色
 
 (1) 與本地跑步賽事不同，號碼布需在比賽當日即場領取
+
 (2) 沿路水塘風景怡人，間中會遇見黃牛三五成群共享自然
+
 (3) 賽後補給豐富：葡撻、水果撻、香蕉，曲奇、紙包飲料...
+
+
+(回程時在巴士上跟身旁一位年逾六十的跑者閒談，得知他在半馬分齡組別中獲得頭三名次，便好奇問他有沒有什麼跑步心得。他說自己平均每天練跑8K，有時早上練完廿公里長課，下午再跟跑友輕鬆跑，直言「跑步沒有奇蹟，只有累積」，亦慶幸自己多年來都沒有重大運動創傷，因此能夠「長跑長有」。)
+
+但願自己「登六」時，還有心力繼續跑下去。
