Update running goal in post

--- a/_posts/2024-02-04-ccm-2024.md
+++ b/_posts/2024-02-04-ccm-2024.md
@@ -35,4 +35,4 @@ tags: [半馬拉松]
 
 (回程時在巴士上跟身旁一位年逾六十的跑者閒談，得知他在半馬分齡組別中獲得頭三名次，便好奇問他有沒有什麼跑步心得。他說自己平均每天練跑8K，有時早上練完廿公里長課，下午再跟跑友輕鬆跑，直言「跑步沒有奇蹟，只有累積」，亦慶幸自己多年來都沒有重大運動創傷，因此能夠「長跑長有」。)
 
-但願自己「登六」時，還有心力繼續跑下去。
+但願自己他朝「登六」時，還有心力繼續跑下去。
