--- a/_posts/2024-02-04-ccm-2024.md
+++ b/_posts/2024-02-04-ccm-2024.md
@@ -24,7 +24,10 @@ tags: [半馬拉松]
 # 個人成續
 當日合共428人跑半馬，我跑1小時44，總名次得第60。
 
-完賽時間雖則僅僅比當年快了1分鐘，手錶顯示平均心率為153 bpm，比當年心率170 bpm低。手錶測量數字雖不能盡信，但相信某程度跟最大攝氧量(VO2 Max)提升有關。最大攝氧量是指每公斤的體重在每分鐘的最大耗氧量，根據Garmin官方解釋，[較高的最大攝氧量代表身體更善於從空氣中吸收氧氣並將其輸送到肌肉](https://www.garmin.com/zh-TW/blog/running/vo2max/)，因此可理解為心肺健康指標。
+完賽時間雖則僅僅比當年快了1分鐘，手錶顯示平均心率為153 bpm，比當年心率170 bpm低。手錶測量數字雖不能盡信，但相信某程度跟最大攝氧量(VO2 Max)提升有關。
+
+![marco-vo2max-feb24](/images/marco-vo2max-feb24.png)
+根據Garmin官方解釋，[較高的最大攝氧量代表身體更善於從空氣中吸收氧氣並將其輸送到肌肉](https://www.garmin.com/zh-TW/blog/running/vo2max/)，因此VO2 Max可理解為心肺健康指標。
 
 依年齡層劃分的男性典型最大攝氧量分數：
 ![male-vo2max](/images/male-vo2max-by-age-group.png)
