Update image paths in markdown files

--- a/_posts/2024-02-04-ccm-2024.md
+++ b/_posts/2024-02-04-ccm-2024.md
@@ -6,7 +6,7 @@ categories: [跑步]
 tags: [半馬拉松]
 ---
 
-![hm-ccm-2024](/images/hm-ccm2024.png){: width="400" height="400" }
+![hm-ccm-2024](/images/marco/hm-ccm2024.jpg){: width="400" height="400" }
 _衝線一刻_
 
 五年前曾跑過這條以麥徑一段為藍本的「魔鬼賽道」，當年是以公司名義報名參加同場另一項半馬賽事 ─ 公益慈善馬拉松。事隔五年，路線依舊，只是今次改以個人報名參賽。翻查資料，這項賽事原來於1981首辦全馬，比渣馬首屆還要早16年呢！
@@ -29,12 +29,12 @@ _衝線一刻_
 
 完賽時間雖則僅僅比當年快了1分鐘，手錶顯示平均心率為153 bpm，比當年心率170 bpm低。手錶測量數字雖不能盡信，但相信某程度跟最大攝氧量(VO2 Max)提升有關。
 
-![marco-vo2max-feb24](/images/marco-vo2max-feb24.png){: width="500" height="500" }
+![marco-vo2max-feb24](/images/marco/vo2max-feb24.png){: width="500" height="500" }
 
 根據Garmin官方解釋，[較高的最大攝氧量代表身體更善於從空氣中吸收氧氣並將其輸送到肌肉](https://www.garmin.com/zh-TW/blog/running/vo2max/)，因此VO2 Max可理解為心肺健康指標。
 
 依年齡層劃分的男性典型最大攝氧量分數：
-![male-vo2max](/images/male-vo2max-by-age-group.png)
+![male-vo2max](/images/marco/male-vo2max-by-age-group.png)
 (數據經The Cooper Institute®許可轉載)
 
 
