--- a/_posts/2020-05-16-upheavel.md
+++ b/_posts/2020-05-16-upheavel.md
@@ -2,8 +2,8 @@
 title: 動盪
 author: Marco Cheung
 date: 2020-05-16 18:00:00 +0800
-categories: [電影欣賞]
-tags: [電影]
+categories: [閱讀]
+tags: [閱讀]
 ---
 
 ![upheavel](/images/upheavel.jpg){: width="400" height="450"}
