Replace NYC Marathon 2024 post with updated content and training insights

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -2,8 +2,8 @@
 title: 紐約馬拉松
 author: Marco Cheung
 date: 2024-11-04 18:00:00 +0800
-categories: [旅行 跑步]
-tags: [德文]
+categories: [跑步]
+tags: [跑步,海外馬]
 ---
 
 人在紐約，在跑完首個七大馬的翌日，悉尼馬拉松便獲正式確認2025年起成為第七大世界馬拉松大滿貫賽事。距離集齊世界馬拉松「冬甩」之路，可謂「路漫漫其修遠兮」。
@@ -44,11 +44,9 @@ _圖片來源：明報_
 _圖片來源：《市民跑者之王》津田誠一著_
 
 
-自己一直相信，跑步只有累積，沒有奇蹟。從前未曾試過月跑量過300公里，但重「量」之餘也要重「質」，包括Tempo Run時控制配速、平日20-25公里長課(LSD)則提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中也會加入上斜跑(uphill workout)路段以模擬跑上橋的感覺，
-
+自己一直相信，跑步只有累積，沒有奇蹟。從前未曾試過月跑量過300公里，但重「量」之餘也提醒自己要重「質」，包括Tempo Run時控制配速、平日20-25公里長課(LSD)則提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中也會加入上斜跑(uphill workout)路段以模擬跑上橋的感覺，
 
 ![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="400" height="300"}
-
 
 
 (2) 機票和住宿安排
