--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -44,7 +44,7 @@ _圖片來源：明報_
 _圖片來源：《市民跑者之王》津田誠一著_
 
 
-自己一直相信，跑步只有累積，沒有奇蹟。從前未曾試過月跑量過300公里，但重「量」之餘也提醒自己要重「質」，包括Tempo Run時控制配速、平日20-25公里長課(LSD)則提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中也會加入上斜跑(uphill workout)路段以模擬跑上橋的感覺，
+今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。從前未曾試過月跑量過300公里，但重「量」之餘也提醒自己要重「質」，包括Tempo Run時控制配速、平日20-25公里長課(LSD)則提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中也會加入上斜跑(uphill workout)路段以模擬跑上橋的感覺，
 
 ![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="400" height="300"}
 
