Update NYC Marathon 2024 post with revised training insights and additional content

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -3,17 +3,17 @@ title: 紐約馬拉松
 author: Marco Cheung
 date: 2024-11-04 18:00:00 +0800
 categories: [跑步]
-tags: [跑步,海外馬]
+tags: [跑步,海外馬拉松]
 ---
 
 人在紐約，在跑完首個七大馬的翌日，悉尼馬拉松便獲正式確認2025年起成為第七大世界馬拉松大滿貫賽事。距離集齊世界馬拉松「冬甩」之路，可謂「路漫漫其修遠兮」。
 
-紐約馬是自己的第五隻海外馬拉松。回想跑海外馬的初心，旨在享受與另一半跑步旅行的樂趣，完賽後有獎牌紀念便是。但今次既然難得夠運抽中紐約馬拉松 (中簽率只有4%)，心態以至賽前準備都跟之前有所不同，畢竟六大馬是跑者們的夢幻舞台。難得有幸踏上世界級舞台，當然要全程投入，盡最大努力發揮到極限。因此比賽前早已訂下賽前目標：低標330 (3小時30分內完成，即自己目前全馬最快時間)，高標320。
+紐約馬是自己的第五隻海外馬拉松。回想跑海外馬的初心，旨在享受與另一半跑步旅行的樂趣，完賽後有獎牌紀念和比賽相就滿足 (正所謂冇獎都要有相)。但今次既然難得夠運抽中紐約馬拉松 (中簽率只有4%)，心態以至賽前準備都跟之前有所不同，畢竟六大馬是跑者們的夢幻舞台。難得有幸踏上世界級舞台，當然要全程投入，盡最大努力發揮到極限。因此比賽前早已訂下賽前目標：低標330 (3小時30分內完成，即自己目前全馬最快時間)，高標320。
 
 # 賽前準備
-## (1) 肌肉訓練：
+## (1) 肌肉訓練
 
-主要訓練兩組肌肉，一是腹部核心肌群(core)。
+日常主要訓練兩組肌肉：腹部核心肌群(core)和下肢肌肉。
 
 腹肌分為三層，由外至內分別為腹外斜肌、腹內斜肌、腹橫肌
 
@@ -24,7 +24,7 @@ _圖片來源：台灣營養部落格_
 
 腹橫肌則屬於「內核心肌群」，呈水平狀圍繞整個腹部，負責維持脊椎的穩定性。強化腹橫肌能減少跑步時脊椎和骨盆的晃動，降低運動時的能量消耗和運動傷害風驗。
 
-另一組是下肢肌肉訓練，主要是膕繩肌(Hamstring)、股四頭肌(Quadriceps)、臀大肌
+下肢肌肉訓練方面，主要包括膕繩肌(Hamstring)、股四頭肌(Quadriceps)和臀大肌。
 
 ![knee-muscle](/images/knee-muscle.jpg){: width="300" height="400"}
 _圖片來源：明報_
@@ -37,20 +37,37 @@ _圖片來源：明報_
 強化臀大肌為跑步進行推蹬動作時提供力量，有助穩定驅幹，預防肌肉產生補償 (例如借用腰部肌肉來維持直立姿勢，久而久之容易產生下背痛或所謂「腰骨痛」)。
 
 
-## (2) 跑步訓練：
-訓練課表主要彷效川內優輝的大學田徑教練津田誠一，在他的著作《市民跑者之王》介紹的Sub330練習賽單，即以每週兩次重點練習（週三速度跑、週六長課），其他日數則以Steady Tempo提高乳酸門檻(lactate threshold)或Easy Run消除疲勞為主。
+## (2) 跑步訓練
+訓練課表主要彷效津田誠一(川內優輝的大學田徑教練)在《市民跑者之王》一書分享的Sub330練習賽單，即以每週兩次重點練習（週三速度跑、週六長課），其他日數則以Steady Tempo提高乳酸門檻(lactate threshold)或Easy Run消除疲勞為主。
 
 ![sub330](/images/sub330_training_schedule.jpg){: width="400" height="300"}
 _圖片來源：《市民跑者之王》津田誠一著_
 
-
-今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。從前未曾試過月跑量過300公里，但重「量」之餘也提醒自己要重「質」，包括Tempo Run時控制配速、平日20-25公里長課(LSD)則提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中也會加入上斜跑(uphill workout)路段以模擬跑上橋的感覺，
+今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。為了應付紐約馬當中的五座大橋，訓練重「量」之餘(包括9月份月跑量過300公里)也重「質」，例如平日20-25公里長課(LSD)提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中亦加插在域多利道上斜跑(uphill workout)以模擬跑上橋的感覺，
 
 ![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="400" height="300"}
 
 
-(2) 機票和住宿安排
+# 比賽前夕
+## (1) 賽前減量 (Tapering)
+賽前兩周在馬場練完最後一次長課(32K)後，便嘗試指數式快速遞減訓練量和強度 (Exponential Taper)：頭一周由之前最高周跑75K，減少四成至周跑46K，最後七日將總訓練量和時間再縮減大約一半，以達至消除疲勞效果並調整身心狀態。
+(賽前兩日在市內跟太太同外母遊景點而走了接近2萬5千步，事後回想，賽前應份外注重休息和身體恢復，此舉實屬不智)
 
+## (2) 醣原負荷法 (Carbo-Loading)
+基本原則是賽前一周遞減訓練量之餘，同時逐步增加全日碳水化合物攝取，特別是賽前三日。目的是提升肌肉長跑時所需燃料儲備(肌醣)，避免「撞牆」。
 
+早排上網報名參與一個名為「NYC Pre-Marathon Pasta Night in Harlem」的非官方活動，後來才知道Harlem是美國黑人聚居地，因此出席Pasta Buffet的盡是黑人，自己跟太太同外母成為了唯一的「白人代表」。場面都幾搞笑。彼此經過一輪寒暄後，感覺黑與白的距離原來只是因為彼此沒有好好認識對方。
 
-(3) 賽前飲食
+## (3) 住宿安排
+由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)附近搭大會Shuttle，為求當天早上用最短時間到達上車地點，我們選擇入住距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要是供應Bagel同cream cheese，天天如是)。
+
+# 比賽日
+大會原先預計搭Shuttle車程約為90分鐘，豈料不消三十分鐘就順利抵達位於Staten Island嘅跑手村(Start Village)。抵埗的第一印象，是難民營！是咁的，大會將跑手分為3組(藍、橙、粉紅)，每組有各自village劃分做等候區，成班跑手輪住排隊拎Dunkin派發的Bagel同熱飲 (因為實在太凍，清晨只得7度)，場景都幾搞笑。自己去到就足足等成兩小時半先俾上起跑區，樂觀啲諗，就係有足夠時間俾你食飽消化同去厠所 (同埋思考下跑馬拉松嘅意義😂)。
+
+起跑前現場奏唱美國國歌，印象對上一次遇到類似經驗，已經係19年跑Stockholm Marathon。(未知將來渣馬會否仿效類似做法呢)
+
+沿路所見，大會係賽事沿路每1英里(miles)同公里(km)都有設置提示牌，照顧不同跑手需要，十分貼心！(雖則自己對miles距離感係零)
+
+"It will move you" 不只是賽事slogan。沿途除咗五個上落橋位，其餘路段基本上都係震耳欲聾的嘅打氣聲同歡呼聲，街頭Live Music (目測好多係黑人表演)又係好震撼人心，全程氣氛基本上都超級無敵正！
+
+自己就更喜歡大會指定sponsor New Balance嘅slogan "Run Your Way"。追求破PB，定是為求完賽衝過終點攞獎牌，no one cares！重要嘅係，你有幾想完成賽前目標。自問已盡力做好每個細微位，今次第一次跑七大馬可以破PB，總算對自己有交待。
