Update NYC Marathon 2024 post with additional reflections and a new image from the pre-marathon pasta night

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -51,12 +51,15 @@ _圖片來源：《市民跑者之王》津田誠一著_
 # 比賽前夕
 ## (1) 賽前減量 (Tapering)
 賽前兩周在馬場練完最後一次長課(32K)後，便嘗試指數式快速遞減訓練量和強度 (Exponential Taper)：頭一周由之前最高周跑75K，減少四成至周跑46K，最後七日將總訓練量和時間再縮減大約一半，以達至消除疲勞效果並調整身心狀態。
+
 (賽前兩日在市內跟太太同外母遊景點而走了接近2萬5千步，事後回想，賽前應份外注重休息和身體恢復，此舉實屬不智)
 
 ## (2) 醣原負荷法 (Carbo-Loading)
 基本原則是賽前一周遞減訓練量之餘，同時逐步增加全日碳水化合物攝取，特別是賽前三日。目的是提升肌肉長跑時所需燃料儲備(肌醣)，避免「撞牆」。
 
 早排上網報名參與一個名為「NYC Pre-Marathon Pasta Night in Harlem」的非官方活動，後來才知道Harlem是美國黑人聚居地，因此出席Pasta Buffet的盡是黑人，自己跟太太同外母成為了唯一的「白人代表」。場面都幾搞笑。彼此經過一輪寒暄後，感覺黑與白的距離原來只是因為彼此沒有好好認識對方。
+
+![nyc-pasta-night](/images/20241101-pasta-night.jpg.png){: width="400" height="300"}
 
 ## (3) 住宿安排
 由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)附近搭大會Shuttle，為求當天早上用最短時間到達上車地點，我們選擇入住距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要是供應Bagel同cream cheese，天天如是)。
@@ -70,4 +73,6 @@ _圖片來源：《市民跑者之王》津田誠一著_
 
 "It will move you" 不只是賽事slogan。沿途除咗五個上落橋位，其餘路段基本上都係震耳欲聾的嘅打氣聲同歡呼聲，街頭Live Music (目測好多係黑人表演)又係好震撼人心，全程氣氛基本上都超級無敵正！
 
-自己就更喜歡大會指定sponsor New Balance嘅slogan "Run Your Way"。追求破PB，定是為求完賽衝過終點攞獎牌，no one cares！重要嘅係，你有幾想完成賽前目標。自問已盡力做好每個細微位，今次第一次跑七大馬可以破PB，總算對自己有交待。
+自己就更喜歡大會指定sponsor New Balance嘅slogan "Run Your Way"。追求破PB，定是為求完賽衝過終點攞獎牌，no one cares！
+
+你重要的是，你有幾想完成賽前目標。今次第一次跑七大馬可以破PB，總算對自己有交待。
