Adjust image dimensions for knee muscle training and running training sections in NYC Marathon 2024 post

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -26,7 +26,7 @@ _圖片來源：台灣營養部落格_
 
 下肢肌肉訓練方面，主要包括膕繩肌(Hamstring)、股四頭肌(Quadriceps)和臀大肌。
 
-![knee-muscle](/images/knee-muscle.jpg){: width="300" height="250"}
+![knee-muscle](/images/knee-muscle.jpg){: width="300" height="300"}
 _圖片來源：明報_
 
 膕繩肌即大腿後側肌，主要負責髖關節伸展、屈膝及脛骨內旋動作。強化膕繩肌不但有助改善摺腿柔韌性以提升步頻，跑步時更可避免小腿過度往前伸而導致膝關節損傷。
@@ -40,12 +40,12 @@ _圖片來源：明報_
 ## (2) 跑步訓練
 訓練課表主要彷效津田誠一(川內優輝的大學田徑教練)在《市民跑者之王》一書分享的Sub330練習賽單，即以每週兩次重點練習（週三速度跑、週六長課），其他日數則以Steady Tempo提高乳酸門檻(lactate threshold)或Easy Run消除疲勞為主。
 
-![sub330](/images/sub330_training_schedule.jpg){: width="300" height="300"}
+![sub330](/images/sub330_training_schedule.jpg){: width="350" height="350"}
 _圖片來源：《市民跑者之王》津田誠一著_
 
 今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。為了應付紐約馬當中的五座大橋，訓練重「量」之餘(包括9月份月跑量過300公里)也重「質」，例如平日20-25公里長課(LSD)提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中亦加插在域多利道上斜跑(uphill workout)以模擬跑上橋的感覺，
 
-![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="250" height="250"}
+![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="300" height="250"}
 
 
 # 比賽前夕
@@ -60,6 +60,7 @@ _圖片來源：《市民跑者之王》津田誠一著_
 早排上網報名參與一個名為「NYC Pre-Marathon Pasta Night in Harlem」的非官方活動，後來才知道Harlem是美國黑人聚居地，因此出席Pasta Buffet的盡是黑人，自己跟太太同外母成為了唯一的「白人代表」。場面都幾搞笑。彼此經過一輪寒暄後，感覺黑與白的距離原來只是因為彼此沒有好好認識對方。
 
 ![nyc-pasta-night](/images/nyc-pasta-night.jpg){: width="300" height="250"}
+_Pasta Night位於Harlem區酒店內，滿目盡是黑人_
 
 ## (3) 住宿安排
 由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)附近搭大會Shuttle，為求當天早上用最短時間到達上車地點，我們選擇入住距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要是供應Bagel同cream cheese，天天如是)。
