Adjust image dimensions in NYC Marathon 2024 post for better layout

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -40,12 +40,12 @@ _圖片來源：明報_
 ## (2) 跑步訓練
 訓練課表主要彷效津田誠一(川內優輝的大學田徑教練)在《市民跑者之王》一書分享的Sub330練習賽單，即以每週兩次重點練習（週三速度跑、週六長課），其他日數則以Steady Tempo提高乳酸門檻(lactate threshold)或Easy Run消除疲勞為主。
 
-![sub330](/images/sub330_training_schedule.jpg){: width="350" height="350"}
+![sub330](/images/sub330_training_schedule.jpg){: width="350" height="400"}
 _圖片來源：《市民跑者之王》津田誠一著_
 
 今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。為了應付紐約馬當中的五座大橋，訓練重「量」之餘(包括9月份月跑量過300公里)也重「質」，例如平日20-25公里長課(LSD)提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中亦加插在域多利道上斜跑(uphill workout)以模擬跑上橋的感覺，
 
-![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="300" height="250"}
+![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="350" height="250"}
 
 
 # 比賽前夕
@@ -63,7 +63,7 @@ _圖片來源：《市民跑者之王》津田誠一著_
 _Pasta Night位於Harlem區酒店內，滿目盡是黑人_
 
 ## (3) 住宿安排
-由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)附近搭大會Shuttle，為求當天早上用最短時間到達上車地點，我們選擇入住距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要是供應Bagel同cream cheese，天天如是)。
+由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)附近搭大會Shuttle，為求當天早上用最短時間到達上車地點，我們選擇入住距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要供應Bagel和cream cheese)。
 
 # 比賽日
 大會原先預計搭Shuttle車程約為90分鐘，豈料不消三十分鐘就順利抵達位於Staten Island嘅跑手村(Start Village)。抵埗的第一印象，是難民營！是咁的，大會將跑手分為3組(藍、橙、粉紅)，每組有各自village劃分做等候區，成班跑手輪住排隊拎Dunkin派發的Bagel同熱飲 (因為實在太凍，清晨只得7度)，場景都幾搞笑。自己去到就足足等成兩小時半先俾上起跑區，樂觀啲諗，就係有足夠時間俾你食飽消化同去厠所 (同埋思考下跑馬拉松嘅意義😂)。
