Update titles in marathon posts for clarity and consistency

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -1,14 +1,16 @@
 ---
-title: 紐約馬拉松
+title: 出戰首個世界馬拉松大滿貫賽事 ─ 紐約馬拉松2024
 author: Marco Cheung
 date: 2024-11-04 18:00:00 +0800
 categories: [跑步]
 tags: [跑步,海外馬拉松]
 ---
 
-人在紐約，在跑完首個七大馬的翌日，悉尼馬拉松便獲正式確認2025年起成為第七大世界馬拉松大滿貫賽事。距離集齊世界馬拉松「冬甩」之路，可謂「路漫漫其修遠兮」。
+(人在紐約，在跑完紐約馬的翌日，悉尼馬拉松便獲正式確認2025年起成為第七大世界馬拉松大滿貫賽事。距離集齊世界馬拉松「冬甩」之路，可謂「路漫漫其修遠兮」)
 
-紐約馬是自己的第五隻海外馬拉松。回想跑海外馬的初心，旨在享受與另一半跑步旅行的樂趣，完賽後有獎牌紀念和比賽相就滿足 (正所謂冇獎都要有相)。但今次既然難得夠運抽中紐約馬拉松 (中簽率只有4%)，心態以至賽前準備都跟之前有所不同，畢竟六大馬是跑者們的夢幻舞台。難得有幸踏上世界級舞台，當然要全程投入，盡最大努力發揮到極限。因此比賽前早已訂下賽前目標：低標330 (3小時30分內完成，即自己目前全馬最快時間)，高標320。
+紐約馬是自己的第五隻海外馬拉松。回想跑海外馬的初心，旨在享受與另一半跑步旅行的樂趣，完賽後有獎牌紀念和比賽相就收貨 (正所謂冇獎都要有相)。但今次既然難得夠運抽中紐約馬拉松 (中簽率只有4%)，心態以至賽前準備都跟之前有所不同，畢竟六大馬是跑者們的夢幻舞台。難得有幸踏上世界級舞台，當然要全程投入，盡最大努力發揮到極限。因此比賽前早已訂下賽前目標：低標330 (3小時30分內完成，即自己目前全馬最快時間)，高標320。
+
+一直聽講，紐約馬很難成就PB，因為整條路線多高低起伏。今次完賽時間3小時28分，比個人最佳時間快一分鐘，實在喜出望外！
 
 # 賽前準備
 ## (1) 肌肉訓練
@@ -45,7 +47,7 @@ _圖片來源：《市民跑者之王》津田誠一著_
 
 今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。為了應付紐約馬當中的五座大橋，訓練重「量」之餘(包括9月份月跑量過300公里)也重「質」，例如平日20-25公里長課(LSD)提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中亦加插在域多利道上斜跑(uphill workout)以模擬跑上橋的感覺，
 
-![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="350" height="250"}
+![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="400" height="200"}
 
 
 # 比賽前夕
@@ -57,13 +59,25 @@ _圖片來源：《市民跑者之王》津田誠一著_
 ## (2) 醣原負荷法 (Carbo-Loading)
 基本原則是賽前一周遞減訓練量之餘，同時逐步增加全日碳水化合物攝取，特別是賽前三日。目的是提升肌肉長跑時所需燃料儲備(肌醣)，避免「撞牆」。
 
-早排上網報名參與一個名為「NYC Pre-Marathon Pasta Night in Harlem」的非官方活動，後來才知道Harlem是美國黑人聚居地，因此出席Pasta Buffet的盡是黑人，自己跟太太同外母成為了唯一的「白人代表」。場面都幾搞笑。彼此經過一輪寒暄後，感覺黑與白的距離原來只是因為彼此沒有好好認識對方。
+早排上網報名參與一個名為「NYC Pre-Marathon Pasta Night in Harlem」的非官方活動，後來才知道Harlem是美國黑人聚居地，因此出席Pasta Buffet的盡是黑人，自己跟太太同外母成為了現場的「白人代表」，場面都幾搞笑。彼此經過一輪寒暄後，感覺黑與白之間的距離皆因彼此沒有契機好好認識對方。
 
 ![nyc-pasta-night](/images/nyc-pasta-night.jpg){: width="300" height="250"}
-_Pasta Night位於Harlem區酒店內，滿目盡是黑人_
+_Pasta Night位於Harlem區的一間酒店內，座上客盡是黑人_
 
-## (3) 住宿安排
-由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)附近搭大會Shuttle，為求當天早上用最短時間到達上車地點，我們選擇入住距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要供應Bagel和cream cheese)。
+## (3) 參觀Expo
+能夠親身體驗世界級賽事，對於賽事紀念品少不免有種FOSS心理，恐怕越遲去到會出現缺貨，因此落機翌日早上就急不及待衝去(其實當時仲jet lag緊)。
+
+![nyc-marathon-expo](/images/nyc-marathon-expo.jpg){: width="300" height="250"}
+_萬眾期待Expo開閘一刻_
+
+![nyc-race](/images/nyc-race.jpg){: width="300" height="250"}
+_26.2英里(miles)，即42.195公里_
+
+![nyc-marathon-expo1](/images/nyc-marathon-expo1.jpg){: width="300" height="250"}
+_血拚跑衫紀念_
+
+## (4) 住宿安排
+由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)門外乘搭大會專車到達起步點，為求當天早上用最短時間到達上車地點，我們選擇入住了距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要供應Bagel和cream cheese)。
 
 # 比賽日
 大會原先預計搭Shuttle車程約為90分鐘，豈料不消三十分鐘就順利抵達位於Staten Island嘅跑手村(Start Village)。抵埗的第一印象，是難民營！是咁的，大會將跑手分為3組(藍、橙、粉紅)，每組有各自village劃分做等候區，成班跑手輪住排隊拎Dunkin派發的Bagel同熱飲 (因為實在太凍，清晨只得7度)，場景都幾搞笑。自己去到就足足等成兩小時半先俾上起跑區，樂觀啲諗，就係有足夠時間俾你食飽消化同去厠所 (同埋思考下跑馬拉松嘅意義😂)。
@@ -76,4 +90,9 @@ _Pasta Night位於Harlem區酒店內，滿目盡是黑人_
 
 自己就更喜歡大會指定sponsor New Balance嘅slogan "Run Your Way"。追求破PB，定是為求完賽衝過終點攞獎牌，no one cares！
 
-你重要的是，你有幾想完成賽前目標。今次第一次跑七大馬可以破PB，總算對自己有交待。
+# 賽後之旅
+New Balance總店
+食Shack Shack
+參觀Museum
+搵New York Times報紙
+整體觀感
