--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -6,11 +6,11 @@ categories: [跑步]
 tags: [跑步,海外馬拉松]
 ---
 
-(人在紐約，在跑完紐約馬的翌日，悉尼馬拉松便獲正式確認2025年起成為第七大世界馬拉松大滿貫賽事。距離集齊世界馬拉松「冬甩」之路，可謂「路漫漫其修遠兮」)
+(人在紐約，在跑完紐約馬的翌日，悉尼馬拉松便獲正式確認2025年起成為第七大世界馬拉松大滿貫賽事，亦是南半球首個馬拉松大滿貫賽事)
 
-紐約馬是自己的第五隻海外馬拉松。回想跑海外馬的初心，旨在享受與另一半跑步旅行的樂趣，完賽後有獎牌紀念和比賽相就收貨 (正所謂冇獎都要有相)。但今次既然難得夠運抽中紐約馬拉松 (中簽率只有4%)，心態以至賽前準備都跟之前有所不同，畢竟六大馬是跑者們的夢幻舞台。難得有幸踏上世界級舞台，當然要全程投入，盡最大努力發揮到極限。因此比賽前早已訂下賽前目標：低標330 (3小時30分內完成，即自己目前全馬最快時間)，高標320。
+紐約馬是自己的第五隻海外馬拉松。回想跑海外馬的初心，旨在享受與另一半跑步旅行的樂趣，完賽後有獎牌和比賽相做紀念 (正所謂冇獎都要有相)。但今次既然難得夠運抽中紐約馬拉松 (中簽率只有4%)，心態以至賽前準備都跟之前有所不同，畢竟六大馬是跑者們的夢幻舞台。難得有幸踏上世界級舞台，當然要全程投入，盡最大努力發揮到極限。因此比賽前早已訂下賽前目標：低標330 (3小時30分內完成，即自己目前全馬最快時間)，高標320。
 
-一直聽講，紐約馬很難成就PB，因為整條路線多高低起伏。今次完賽時間3小時28分，比個人最佳時間快一分鐘，實在喜出望外！
+一直聽人講，紐約馬很難成就PB，因為整條路線多高低起伏。今次完賽時間3小時28分，比個人最佳時間快了一分鐘，實在喜出望外！
 
 # 賽前準備
 ## (1) 肌肉訓練
@@ -35,8 +35,7 @@ _圖片來源：明報_
 
 股四頭肌即大腿前側肌，負責伸展膝蓋和幫助下肢承托身體重量。強化股四頭肌有助膝關節穩定，減輕膝關節壓力。
 
-臀大肌是人體其中一舊最大的肌肉，主要負責髖關節伸展與外旋；位在較側上的臀中肌則是負責髖關節外展；臀小肌則輔助臀中肌和臀大肌，進一步穩定髖關節。
-強化臀大肌為跑步進行推蹬動作時提供力量，有助穩定驅幹，預防肌肉產生補償 (例如借用腰部肌肉來維持直立姿勢，久而久之容易產生下背痛或所謂「腰骨痛」)。
+臀大肌是人體其中一舊最大的肌肉，主要負責髖關節伸展與外旋；位在較側上的臀中肌則負責髖外展(Hip abduction)，當站立、行走和跑步時維持骨盆穩定性；臀小肌則輔助臀中肌和臀大肌，進一步穩定髖關節。強化臀大肌為跑步進行推蹬動作時提供力量，有助穩定驅幹，避免其他肌肉代償 (例如借用腰部肌肉來維持直立姿勢，久而久之容易產生下背痛或所謂「腰骨痛」)。
 
 ## (2) 跑步訓練
 訓練課表主要彷效津田誠一(川內優輝的大學田徑教練)在《市民跑者之王》一書分享的Sub330練習賽單，即以每週兩次重點練習（週三速度跑、週六長課），其他日數則以Steady Tempo提高乳酸門檻(lactate threshold)或Easy Run消除疲勞為主。
@@ -46,7 +45,7 @@ _圖片來源：《市民跑者之王》津田誠一著_
 
 今年初渣馬PB跑進Sub330後，深深明白跑步只有累積，沒有奇蹟。為了應付紐約馬當中的五座大橋，訓練重「量」之餘(包括9月份月跑量過300公里)也重「質」，例如平日20-25公里長課(LSD)提醒自己控制配速之餘，盡量維持心率在目標區間(Zone 2-3)，間中亦加插在域多利道上斜跑(uphill workout)以模擬跑上橋的感覺，
 
-![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="400" height="200"}
+![training-jul-to-oct24](/images/running-training-jul-to-oct24.png){: width="350" height="180"}
 
 
 # 比賽前夕
@@ -79,19 +78,26 @@ _血拚跑衫紀念_
 由於比賽當日早上5時30分需到達紐約公共圖書館(New York Public Library)門外乘搭大會專車到達起步點，為求當天早上用最短時間到達上車地點，我們選擇入住了距離圖書館兩條街的一間酒店(Premier New York Times Square)，包簡約早餐(主要供應Bagel和cream cheese)。
 
 # 比賽日
-大會原先預計搭Shuttle車程約為90分鐘，豈料不消三十分鐘就順利抵達位於Staten Island嘅跑手村(Start Village)。抵埗的第一印象，是難民營！是咁的，大會將跑手分為3組(藍、橙、粉紅)，每組有各自village劃分做等候區，成班跑手輪住排隊拎Dunkin派發的Bagel同熱飲 (因為實在太凍，清晨只得7度)，場景都幾搞笑。自己去到就足足等成兩小時半先俾上起跑區，樂觀啲諗，就係有足夠時間俾你食飽消化同去厠所 (同埋思考下跑馬拉松嘅意義😂)。
+大會原先預計搭Shuttle車程約為90分鐘，豈料不消三十分鐘就順利抵達Staten Island上的跑手村(Start Village)。抵埗的第一印象，是難民營！大會將跑手分為3組(藍、橙、粉紅)，每組有各自village劃分做等候區，成班跑手排隊等Dunkin派發的Bagel同熱飲 (因為實在太凍，清晨只得7度)，場景都幾搞笑！自己去到足足等成兩個半鐘頭先俾上起跑區，樂觀去諗，變相有充裕時間食飽消化同去厠所，加上大會在現場設置大銀幕不斷loop由NYRR Coach解構路線策略的短片，都有助自己賽前進入「心流狀態」。
 
-起跑前現場奏唱美國國歌，印象對上一次遇到類似經驗，已經係19年跑Stockholm Marathon。(未知將來渣馬會否仿效類似做法呢)
+起跑前，現場奏唱美國國歌，印象對上一次遇到類似經驗，已是19年跑Stockholm Marathon。
 
-沿路所見，大會係賽事沿路每1英里(miles)同公里(km)都有設置提示牌，照顧不同跑手需要，十分貼心！(雖則自己對miles距離感係零)
+沿路所見，大會在每1英里(miles)同公里(km)都有設置提示牌，照顧不同跑手需要，十分貼心！(雖則自己對miles距離感係零)
 
-"It will move you" 不只是賽事slogan。沿途除咗五個上落橋位，其餘路段基本上都係震耳欲聾的嘅打氣聲同歡呼聲，街頭Live Music (目測好多係黑人表演)又係好震撼人心，全程氣氛基本上都超級無敵正！
+最後一段臨轉入Central Park的長命斜(The Fifth Avenue hill)，不斷提自己「頂埋去，轉埋彎就到終點」，雖則轉埋彎入公園之後，尚有一小段暗斜和小山坡要克服，但純粹出口術還是有點作用吧。
 
-自己就更喜歡大會指定sponsor New Balance嘅slogan "Run Your Way"。追求破PB，定是為求完賽衝過終點攞獎牌，no one cares！
+"It will move you" 不只是賽事slogan。沿途除咗五個上落橋位，其餘路段基本上都係震耳欲聾的嘅打氣聲同歡呼聲，街頭Live Music (目測好多係黑人表演)同樣震撼人心，全程氣氛基本上都超級無敵正！自己就更喜歡大會sponsor New Balance的slogan "Run Your Way"。追求破PB，定是單純享受大賽氣氛，who cares！The only right way to run, is your way.
 
-# 賽後之旅
-New Balance總店
-食Shack Shack
-參觀Museum
-搵New York Times報紙
-整體觀感
+# 賽後體驗 (Beyond the Finish Line)
+1) 跑完之後披住Poncho步出公園至公眾會合區前的一大段路 (保守估計起碼有2公里)，都有大會攝影同backdrop等住你行埋去影相留念。
+
+2) 碰巧行到Columbus Circle附近的New Balance pop-up store，現場除了有啤酒飲(唔知點解咁凍仲有人想飲凍野)，仲可以免費雕刻獎牌，正！
+
+3) 當日仲有免費午餐：當日只要憑號碼布或獎牌到紐約市內任何一間Shake Shack，即可獲得1個ShackBurger。(跑完先可以享受，所以天下間都係冇免費午餐啊)
+
+4) 今年賽事翌日，MoMA美術館首次與紐約馬主辦機構合作，安排了一節跑手優先場。我們有幸預先登記，現場更招待享用特別早餐，之後當然第一時間走上頂樓同梵高The Starry Night名畫打卡呢。
+
+5) 賽事翌日，New York Times一如既往，發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手姓名。只可惜我們遍尋不果。三日後在Brooklyn Public Library有機會翻看舊報紙，終於搵到自己名！
+
+![new-york-marathon-newspaper](/images/new-york-marathon-newspaper1.jpg){: width="300" height="250"}
+![new-york-marathon-newspaper](/images/new-york-marathon-newspaper2.jpg){: width="300" height="250"}
