Refine text for clarity and enhance the narrative in NYC Marathon 2024 post

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -93,11 +93,11 @@ _血拚跑衫紀念_
 
 2) 碰巧行到Columbus Circle附近的New Balance pop-up store，現場除了有啤酒飲(唔知點解咁凍仲有人想飲凍野)，仲可以免費雕刻獎牌，正！
 
-3) 當日仲有免費午餐：當日只要憑號碼布或獎牌到紐約市內任何一間Shake Shack，即可獲得1個ShackBurger。(跑完先可以享受，所以天下間都係冇免費午餐啊)
+3) 當日憑號碼布或獎牌到紐約市內任何一間Shake Shack，即可獲得1個ShackBurger，當下對於跑手這身份有種privilege感覺。(但都係跑完先至可以享受，所以天下間都係冇免費午餐喲)
 
 4) 今年賽事翌日，MoMA美術館首次與紐約馬主辦機構合作，安排了一節跑手優先場。我們有幸預先登記，現場更招待享用特別早餐，之後當然第一時間走上頂樓同梵高The Starry Night名畫打卡呢。
 
-5) 賽事翌日，New York Times一如既往，發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手姓名。只可惜我們遍尋不果。三日後在Brooklyn Public Library有機會翻看舊報紙，終於搵到自己名！
+5) New York Times亦一如既往，於賽事翌日發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手姓名。只可惜我們當日遍尋不果。三日後在Brooklyn Public Library內先有機會翻看舊報紙，先至終於係報紙上搵到自己名！
 
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper1.jpg){: width="300" height="250"}
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper2.jpg){: width="300" height="250"}
