--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -95,7 +95,7 @@ _血拚跑衫紀念_
 
 3) 當日憑號碼布或獎牌到紐約市內任何一間Shake Shack，即可獲得1個ShackBurger，當下對於跑手這身份有種privilege感覺。(但都係跑完先至可以享受，所以天下間都係冇免費午餐喲)
 
-4) 今年賽事翌日，MoMA美術館首次與紐約馬主辦機構合作，安排了一節跑手優先場。我們有幸預先登記，現場更招待享用特別早餐，之後當然第一時間走上頂樓同梵高The Starry Night名畫打卡呢。
+4) 今年賽事翌日，MoMA美術館首次與紐約馬主辦機構合作，安排了一節跑手優先場。我們有幸預先成功登記。當天早上，現場更招待享用特別早餐，之後等正式開放時間，隨即走上頂樓同梵高The Starry Night名畫打卡。
 
 5) New York Times亦一如既往，於賽事翌日發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手姓名。只可惜我們當日遍尋不果。三日後在Brooklyn Public Library內先有機會翻看舊報紙，先至終於係報紙上搵到自己名！
 
