--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -101,3 +101,5 @@ _血拚跑衫紀念_
 
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper1.jpg){: width="300" height="250"}
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper2.jpg){: width="300" height="250"}
+
+整體觀感，當日比賽期間沿路打氣人群和歡呼聲，感覺到全城正投入在這場盛事當中。而完賽後大大小小慶祝跑手完賽活動，亦充滿著Celebration氣氛。至於賽後一兩天仍見到有跑手掛著完賽獎牌在街上招搖(沒有撞騙XD)，這亦是我在本地和其他馬拉松從未遇見過的，十分獨特和有趣。
