--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -95,11 +95,15 @@ _血拚跑衫紀念_
 
 3) 當日憑號碼布或獎牌到紐約市內任何一間Shake Shack，即可獲得1個ShackBurger，當下對於跑手這身份有種privilege感覺。(但都係跑完先至可以享受，所以天下間都係冇免費午餐喲)
 
-4) 今年賽事翌日，MoMA美術館首次與紐約馬主辦機構合作，安排了一節跑手優先場。我們有幸預先成功登記。當天早上，現場更招待享用特別早餐，之後等正式開放時間，隨即走上頂樓同梵高The Starry Night名畫打卡。
+4) 今年賽事翌日，MoMA美術館首次與紐約馬主辦機構合作，跑手可獲免費入場。由於我們預先成功登記，當天早上更獲招待連同家人享用特別早餐。待公眾正式入場時間，我和太太便二話不說衝上頂樓同梵高The Starry Night名畫打卡。
+
+![MoMA-visit](/images/MoMA.jpg){: width="300" height="250"}
+_是日跑手專享特別場次_
 
 5) New York Times亦一如既往，於賽事翌日發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手姓名。只可惜我們當日遍尋不果。三日後在Brooklyn Public Library內先有機會翻看舊報紙，先至終於係報紙上搵到自己名！
 
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper1.jpg){: width="300" height="250"}
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper2.jpg){: width="300" height="250"}
+_這頁被New York Times稱之為Marathon Agate，皆因跑手名字和完賽時間都是以細小字體印出_
 
 整體觀感，當日比賽期間沿路打氣人群和歡呼聲，感覺到全城正投入在這場盛事當中。而完賽後大大小小慶祝跑手完賽活動，亦充滿著Celebration氣氛。至於賽後一兩天仍見到有跑手掛著完賽獎牌在街上招搖(沒有撞騙XD)，這亦是我在本地和其他馬拉松從未遇見過的，十分獨特和有趣。
