Refine text for clarity and detail in NYC Marathon 2024 post

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -100,7 +100,7 @@ _血拚跑衫紀念_
 ![MoMA-visit](/images/MoMA.jpg){: width="300" height="250"}
 _是日跑手專享特別場次_
 
-5) New York Times亦一如既往，於賽事翌日發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手姓名。只可惜我們當日遍尋不果。三日後在Brooklyn Public Library內先有機會翻看舊報紙，先至終於係報紙上搵到自己名！
+5) New York Times亦一如既往，於賽事翌日發行印刷版專輯(Marathon Agate)，其中一版印有超過55000跑手名和完賽時間，只可惜我們當日遍尋實體報不果。直至三日後跟太太逛Brooklyn Public Library，先有機會翻看當日舊報紙，然後自得其樂地在字裡行間中搵自己。
 
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper1.jpg){: width="300" height="250"}
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper2.jpg){: width="300" height="250"}
