Refine narrative and enhance emotional impact in NYC Marathon 2024 post

--- a/_posts/2024-11-04-nyc-marathon-2024.md
+++ b/_posts/2024-11-04-nyc-marathon-2024.md
@@ -106,4 +106,4 @@ _是日跑手專享特別場次_
 ![new-york-marathon-newspaper](/images/new-york-marathon-newspaper2.jpg){: width="300" height="250"}
 _這頁被New York Times稱之為Marathon Agate，皆因跑手名字和完賽時間都是以細小字體印出_
 
-整體觀感，當日比賽期間沿路打氣人群和歡呼聲，感覺到全城正投入在這場盛事當中。而完賽後大大小小慶祝跑手完賽活動，亦充滿著Celebration氣氛。至於賽後一兩天仍見到有跑手掛著完賽獎牌在街上招搖(沒有撞騙XD)，這亦是我在本地和其他馬拉松從未遇見過的，十分獨特和有趣。
+整體觀感，當日比賽期間沿路打氣人群和歡呼聲，感覺到全城正投入在這場盛事當中。完賽後的大大小小慶祝跑手完賽活動，使我對於「紐約馬跑手」身份感到自豪。至於賽後一兩天仍見到有跑手掛著完賽獎牌在街上招搖(沒有撞騙XD)，這亦是我在本地和其他馬拉松從未遇見過的，十分獨特和有趣。
